alignment fix

--- a/style.css
+++ b/style.css
@@ -23,3 +23,8 @@ p:hover{
     cursor: pointer;
     background-color: blueviolet;
 }
+.sample{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
